--- a/style.css
+++ b/style.css
@@ -10,4 +10,7 @@ Tags: flexible-width, translation-ready, microformats, rtl-language-support
 License: WTFPL
 License URI: http://sam.zoy.org/wtfpl/
 
+
+All of the css files used by theme are in library/css if you wish to add or alter something, use the custom.css file
+
 ******************************************************************/
